--- a/vagrant_labs/Vagrantfile
+++ b/vagrant_labs/Vagrantfile
@@ -1,14 +1,13 @@
 Vagrant.configure("2") do |config|
     #aqui temos um forwarded de porta
-      #config.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
+      #config.vm.network "forwarded_port", guest: 80, host: 8045, host_ip: "127.0.0.1"
     
       #config.vm.provision "shell", path: "provision.sh"
       config.vm.define "voxtec"
       config.vm.hostname = "voxtec-pc"
-      config.vm.box = "ubuntu/focal64" #distribuição linux e a versão
-      config.vm.network "private_network", ip: "192.168.56.2" #aqui seria para usar uma rede privada
-      #config.vm.network "forwarded_port",guest: 8080,host: 8080
-      #no bloco abaixo, definimos o hardware
+      config.vm.box = "ubuntu/focal64"
+      config.vm.network "private_network", ip: "192.168.56.2" 
+      config.vm.network "forwarded_port",guest: 8080,host: 8080
       #config.disksize.size = '40GB'
       config.vm.provider "virtualbox" do |vb|
       vb.memory = "2048"
